--- a/gpm_vibration_module_api/Visualize/ParticleModuleView.resx
+++ b/gpm_vibration_module_api/Visualize/ParticleModuleView.resx
@@ -15,8 +15,7 @@
     ... ado.net/XML headers & schema ...
     <resheader name="resmimetype">text/microsoft-resx</resheader>
     <resheader name="version">2.0</resheader>
-    <resheader name="reader">System.Resources.ResXResourceReader, 
-    , ...</resheader>
+    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
     <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
     <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
     <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
@@ -1504,19 +1503,19 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACC
-        AwAAAk1TRnQBSQFMAgEBAgEAARgBAAEYAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABEH4AAycBOgNCAdADSgGTAw0BEegAAwwBEANKAZcDBAH9AwAB/wMAAf8DKQHq
-        AzsBY+AAAzQBVAMvAeUDAAH/AwAB/wMAAf8DAAH/A0UBywMkATaUAANEAX0DRgGCPAADFgEeA00BsQMA
-        Af8DAAH/AwAB/wMAAf8DIwHtAzwBZwMCAQOYAANGAYIDAAH/A0UBgTAAAwIBAwM/AW8DGAHzAwAB/wMA
-        Af8DAAH/AwQB/QNLAZwDDwEUpAADRwGEAwAB/wNFAYEoAAMhATADRQHLAwAB/wMAAf8DAAH/AwAB/wND
-        Ac0DJgE4sAADRwGEAwAB/wNFAYEcAAMHAQoDSAGMAwcB+wMAAf8DAAH/AwAB/wMgAe4DPQFqAwIBA7gA
-        A0cBhAMAAf8DRQGBFAADLwFJAzcB3gMAAf8DAAH/AwAB/wMDAf0DSwGeAxABFsAAA0cBhQMAAf8DRQGA
-        FAADNwFaAykB6AMAAf8DAAH/AwAB/wMTAfcDQwF5AwQBBrwAA0cBhQMAAf8DRQGBHAADDQERA0oBmAME
-        Af0DAAH/AwAB/wMAAf8DPQHWAyoBQbQAA0cBhAMAAf8DRQGBKAADJwE6Az8B0gMAAf8DAAH/AwAB/wMA
-        Af4DSwGiAxEBF6gAA0YBgwMAAf8DRQGBMAADBAEFA0IBdgMXAfQDAAH/AwAB/wMAAf8DIAHvAz0BaQMC
-        AQOgAANEAX0DRgGCPAADFwEgA0wBtQMAAf8DAAH/AwAB/wMAAf8DRQHKAyMBM+gAAzQBVAMwAeUDAAH/
-        AwAB/wMAAf8DBAH8A0oBkgMLAQ/kAAMKAQ4DSgGTAwQB/AMAAf8DAAH/Ay0B5gMvAUnsAAMkATUDRgHM
-        A0sBlgMMARCEAAFCAU0BPgcAAT4DAAEoAwABQAMAARADAAEBAQABAQUAAYAXAAP/AQAD/wHhBAAD/wGA
+        AwAAAk1TRnQBSQFMAgEBAgEAASABAAEgAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABEAMAAQEBAAEgBgABEH4AAycBOgNLAdADTAGTAw0BEegAAwwBEANNAZcDBQH9AwAB/wMAAf8DMgHq
+        AzsBY+AAAzQBVAM4AeUDAAH/AwAB/wMAAf8DAAH/A00BywMkATaUAANFAX0DRwGCPAADFgEeA1EBsQMA
+        Af8DAAH/AwAB/wMAAf8DLAHtAzwBZwMCAQOYAANHAYIDAAH/A0YBgTAAAwIBAwM/AW8DHwHzAwAB/wMA
+        Af8DAAH/AwUB/QNOAZwDDwEUpAADSAGEAwAB/wNGAYEoAAMhATADTQHLAwAB/wMAAf8DAAH/AwAB/wNM
+        Ac0DJgE4sAADSAGEAwAB/wNGAYEcAAMHAQoDSgGMAwkB+wMAAf8DAAH/AwAB/wMoAe4DPQFqAwIBA7gA
+        A0gBhAMAAf8DRgGBFAADLwFJA0EB3gMAAf8DAAH/AwAB/wMEAf0DTQGeAxABFsAAA0gBhQMAAf8DRgGA
+        FAADNwFaAzEB6AMAAf8DAAH/AwAB/wMXAfcDRAF5AwQBBrwAA0gBhQMAAf8DRgGBHAADDQERA00BmAMF
+        Af0DAAH/AwAB/wMAAf8DRgHWAyoBQbQAA0gBhAMAAf8DRgGBKAADJwE6A0kB0gMAAf8DAAH/AwAB/wMA
+        Af4DTwGiAxEBF6gAA0cBgwMAAf8DRgGBMAADBAEFA0IBdgMcAfQDAAH/AwAB/wMAAf8DKAHvAz0BaQMC
+        AQOgAANFAX0DRwGCPAADFwEgA1EBtQMAAf8DAAH/AwAB/wMAAf8DTgHKAyMBM+gAAzQBVAM5AeUDAAH/
+        AwAB/wMAAf8DBQH8A0sBkgMLAQ/kAAMKAQ4DTAGTAwUB/AMAAf8DAAH/AzcB5gMvAUnsAAMkATUDTgHM
+        A00BlgMMARCEAAFCAU0BPgcAAT4DAAEoAwABQAMAARADAAEBAQABAQUAAYAXAAP/AQAD/wHhBAAD/wGA
         BAAD/wUAAfkB/wH8AQEEAAH4Af8B8AEHBAAB/AF/AeABHwQAAf4BPwGAAT8EAAH/AR8BAAH/BAAB/wEf
         AQAB/wQAAf4BPwGAAX8EAAH8AX8B4AEfBAAB+AH/AfABBwQAAfkB/wH8AQMEAAP/BQAD/wGABAAD/wHh
         BAAL
